# simple-booking

./: .gitignore  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile  diesel.toml
backend/migrations/2025-09-29-065450-0000_create_users/: up.sql
backend/migrations/2025-09-29-070016-0000_create_bookings/: down.sql  up.sql
backend/migrations/2025-09-30-085252-0000_create_roles/: up.sql
backend/migrations/2025-09-30-085522-0000_create_users_roles/: down.sql  up.sql
backend/migrations/2025-09-30-090257-0000_create_permissions/: up.sql
backend/migrations/2025-09-30-090314-0000_create_roles_permissions/: up.sql
backend/src/: main.rs  models.rs  schema.rs  services.rs
backend/src/users/: mod.rs  service.rs
frontend/: package.json
frontend/src-tauri/: tauri.conf.json
