[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "2.1.0", features = ["postgres", "uuid", "chrono", "r2d2"] }
r2d2 = "0.8"
dotenvy = "0.15"
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
jsonwebtoken = "9.3.1"
argon2 = "0.4.1"
rand = "0.8"